paragraph inside branch one paragraph

--- a/one.html
+++ b/one.html
@@ -5,6 +5,9 @@
     <title></title>
   </head>
   <body>
-    <p>this is branch one</p>
+    <p>
+      this is branch one
+      <p>this a commit in branch one</p>
+    </p>
   </body>
 </html>
