--- a/three.html
+++ b/three.html
@@ -2,4 +2,4 @@
 <br>
 three also has an update on two at the top.
 </p>
-<p>now three has a change that will stay for now unstaged</p>
+<p>now three has a change that will stay for now unstaged. for now...</p>
