--- a/two.html
+++ b/two.html
@@ -1,4 +1,4 @@
-<p>this is the update of branch three on two.</p>
+<p>this is the update of branch three on two. and this is another bit</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
