--- a/one.html
+++ b/one.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style type="text/css">
+    body p{
+      background: blue;
+      color: white;
+      font-family: verdana;
+      padding: 12px;
+    }
+    </style>
     <meta charset="utf-8">
     <title></title>
   </head>
