link dsd three a one

--- a/three.html
+++ b/three.html
@@ -1,3 +1,8 @@
+<ul>
+  <li>
+    <a href="one.html">go to one</a>
+  </li>
+</ul>
 <p>this is three.
 <br>
 three also has an update on two at the top.
