links stylesheet y link rel en one.html

--- a/one.html
+++ b/one.html
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style type="text/css">
-    body p{
-      background: blue;
-      color: white;
-      font-family: verdana;
-      padding: 12px;
-    }
-    </style>
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
+
     <meta charset="utf-8">
     <title></title>
   </head>
